  * Remove unused references to socket-modules from pkg-lists.
  * Drop no longer needed versioned build dependency on dpkg.

  [ Aurelien Jarno ]
  * Build GNU/kFreeBSD images using grub-mkrescue instead of grub-image, 
    using patch from Robert Millan.

  [ Samuel Thibault ]
  * Add hurd-i386 configuration files.
  * Add mtools, win32-loader, and grub-pc build-dependency on hurd-i386 too.

 -- Frans Pop <fjp@debian.org>  Fri, 25 Dec 2009 06:43:03 +0100

debian-installer (20091215) unstable; urgency=low

  [ Colin Watson ]
  * Merge from Ubuntu:
    - Document new $default_filesystem substitution and
      $default_filesystem{ } internal specifier in partman recipes.
  * Initial changes to target squeeze (see
    http://lists.debian.org/debian-release/2009/01/msg00682.html for its
    version number).
  * Add cdebconf-newt-terminal to most images that include
    cdebconf-newt-udeb (although not floppies).
  * Introduce *_SUPPORTED_EXTRA variables, which can be used to define
    "optional" supported targets. Use this to allow monolithic to be built
    without having to edit configuration files and without bloating official
    builds.
  * Use os-prober-udeb rather than os-prober for powerpc monolithic target
    (thanks, Wartan Hachaturow).
  * Filter udeb dependencies based on Kernel-Version and Subarchitecture
    (closes: #490634).
  * Filter out packages that don't match KERNELVERSION from downloaded
    Packages files. Despite the above change, apt still seems to want to
    pull in multiple providers of virtual packages, which causes problems
    otherwise.
  * Clear Dir::Etc::sourceparts in build/util/pkg-list, to match
    build/util/get-packages.
  * Fix spelling of mdcfg in menu-item-numbers.txt.
  * Update menu-item-numbers.txt to account for architectures moving towards
    partman, and the merge of lvmcfg and mdcfg into partman-lvm and
    partman-md respectively.
  * Remove mention of autopartkit, removed in r52272.