@@ -1,4 +1,4 @@
-#!/usr/bin/make -f
+#! /usr/bin/make -f
 
 ARCH=$(shell dpkg-architecture -qDEB_BUILD_ARCH)
 VERSION=$(shell LC_ALL=C dpkg-parsechangelog | grep ^Version: | cut -d ' ' -f 2)
@@ -23,7 +23,7 @@ TARNAME=debian-installer-images_$(VERSION)_$(ARCH).tar.gz
 clean:
 	dh_testdir
 	dh_testroot
-	dh_clean build-stamp
+	dh_clean
 	$(MAKE) -C build reallyclean
 	$(MAKE) -C doc/devel/partman clean
 	$(MAKE) -C doc/devel/internals clean
@@ -45,7 +45,7 @@ build-stamp:
 install: build
 	dh_testdir
 	dh_testroot
-	dh_clean -k
+	dh_prep
 	dh_installdirs
 	
 	debian/rules build-images
