@@ -25,6 +25,9 @@ debian-installer (2009xxxx) UNRELEASED; urgency=low
   * Add hurd-i386 configuration files.
   * Add mtools, win32-loader, and grub-pc build-dependency on hurd-i386 too.
 
+  [ Colin Watson ]
+  * Upgrade to debhelper v7.
+
  -- Frans Pop <fjp@debian.org>  Fri, 25 Dec 2009 06:43:03 +0100
 
 debian-installer (20091215) unstable; urgency=low
